compiler/testData/asJava/lightClasses/compilationErrors/ActualClass.kt
// p.B
// FIR_COMPARISON
package p

actual class B